xsm_expl/stage_7/task_1/y.output
   0  $accept : program $end

   1  program : TypeDefBlock ClassdefBlock GdeclBlock FdefBlock MainBlock
   2          | TypeDefBlock ClassdefBlock GdeclBlock MainBlock

   3  TypeDefBlock : TYPE TypeDefList ENDTYPE
   4               |

   5  TypeDefList : TypeDefList TypeDef
   6              | TypeDef

   7  TypeDef : ID '{' FieldDeclList '}'

   8  FieldDeclList : FieldDeclList FieldDecl
   9                | FieldDecl

  10  FieldDecl : TypeName ID COLON

  11  ClassdefBlock : CLASS ClassDefList ENDCLASS
  12                |

  13  ClassDefList : ClassDefList ClassDef
  14               | ClassDef

  15  ClassDef : Cname '{' DECL Fieldlists MethodDecl ENDDECL MethodDefns '}'

  16  Cname : ID

  17  Fieldlists : Fieldlists Fld
  18             | Fld

  19  Fld : INT ID COLON
  20      | STR ID COLON
  21      | ID ID COLON

  22  MethodDecl : MethodDecl MDecl
  23             | MDecl

  24  MDecl : ID ID '(' ParamList ')' COLON
  25        | INT ID '(' ParamList ')' COLON
  26        | STR ID '(' ParamList ')' COLON

  27  MethodDefns : MethodDefns Fdef
  28              | Fdef

  29  FieldFunction : SELF '.' ID '(' ArgList ')'
  30                | ID '.' ID '(' ArgList ')'
  31                | Field '.' ID '(' ArgList ')'

  32  GdeclBlock : DECL GdeclList ENDDECL
  33             | DECL ENDDECL
  34             |

  35  GdeclList : GdeclList GDecl
  36            | GDecl

  37  GDecl : Type GidList COLON

  38  Type : INT
  39       | STR
  40       | ID

  41  GidList : GidList COMMA Gid
  42          | Gid

  43  Gid : ID
  44      | ID '[' NUM ']'
  45      | ID '(' GParamList ')'

  46  FdefBlock : FdefBlock Fdef
  47            | Fdef

  48  Fdef : Type ID '(' ParamList ')' '{' LdeclBlock Body '}'
  49       | Type ID '(' ParamList ')' '{' Body '}'

  50  LdeclBlock : DECL LDeclList ENDDECL
  51             | DECL ENDDECL

  52  LDeclList : LDeclList LDecl
  53            | LDecl

  54  LDecl : TypeName IdList COLON

  55  IdList : IdList COMMA ID
  56         | ID

  57  Body : START Slist END

  58  ParamList : ParamList COMMA Param
  59            | Param
  60            |

  61  Param : TypeName ID

  62  GParamList : GParamList COMMA GParam
  63             | GParam
  64             |

  65  GParam : TypeName ID

  66  MainBlock : INT MAIN '(' ')' '{' LdeclBlock Body '}'
  67            | INT MAIN '(' ')' '{' Body '}'

  68  Slist : Slist Stmt
  69        | Stmt

  70  Stmt : InputStmt
  71       | OutputStmt
  72       | AsgStmt
  73       | IfStmt
  74       | WhileStmt
  75       | BreakStmt
  76       | ContinueStmt
  77       | Retstmt
  78       | FreeStmt

  79  IfStmt : IF expr THEN Slist ELSE Slist ENDIF COLON
  80         | IF expr THEN Slist ENDIF COLON

  81  WhileStmt : WHILE expr DO Slist ENDWHILE COLON

  82  InputStmt : READ expr COLON

  83  OutputStmt : WRITE expr COLON
  84             | WRITE String COLON

  85  AsgStmt : expr ASSG expr COLON
  86          | expr ASSG String COLON

  87  BreakStmt : BREAK COLON

  88  ContinueStmt : CONT COLON

  89  FreeStmt : FREE expr COLON

  90  Retstmt : RETURN expr COLON

  91  String : '(' STRING_TYPE ')'
  92         | STRING_TYPE

  93  expr : expr PLUS expr
  94       | expr MINUS expr
  95       | expr DIV expr
  96       | expr MUL expr
  97       | expr MOD expr
  98       | '(' expr ')'
  99       | expr LT expr
 100       | expr LE expr
 101       | expr GT expr
 102       | expr GE expr
 103       | expr EQ expr
 104       | expr NE expr
 105       | expr OR expr
 106       | expr AND expr
 107       | NUM
 108       | NULLVAL
 109       | ID
 110       | ID '[' expr ']'
 111       | ID '(' ')'
 112       | ID '(' ArgList ')'
 113       | Field
 114       | ALLOC '(' ')'
 115       | INITIALIZE '(' ')'
 116       | FieldFunction
 117       | NEW '(' ID ')'
 118       | DELETE '(' Field ')'

 119  Field : Field '.' ID
 120        | ID '.' ID

 121  ArgList : ArgList COMMA expr
 122          | expr

 123  TypeName : INT
 124           | STR
 125           | ID

state 0
	$accept : . program $end  (0)
	TypeDefBlock : .  (4)

	TYPE  shift 1
	ID  reduce 4
	INT  reduce 4
	STR  reduce 4
	DECL  reduce 4
	CLASS  reduce 4

	program  goto 2
	TypeDefBlock  goto 3


state 1
	TypeDefBlock : TYPE . TypeDefList ENDTYPE  (3)

	ID  shift 4
	.  error

	TypeDefList  goto 5
	TypeDef  goto 6


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : TypeDefBlock . ClassdefBlock GdeclBlock FdefBlock MainBlock  (1)
	program : TypeDefBlock . ClassdefBlock GdeclBlock MainBlock  (2)
	ClassdefBlock : .  (12)

	CLASS  shift 7
	ID  reduce 12
	INT  reduce 12
	STR  reduce 12
	DECL  reduce 12

	ClassdefBlock  goto 8


state 4
	TypeDef : ID . '{' FieldDeclList '}'  (7)

	'{'  shift 9
	.  error


state 5
	TypeDefBlock : TYPE TypeDefList . ENDTYPE  (3)
	TypeDefList : TypeDefList . TypeDef  (5)

	ID  shift 4
	ENDTYPE  shift 10
	.  error

	TypeDef  goto 11


state 6
	TypeDefList : TypeDef .  (6)

	.  reduce 6


state 7
	ClassdefBlock : CLASS . ClassDefList ENDCLASS  (11)

	ID  shift 12
	.  error

	ClassDefList  goto 13
	ClassDef  goto 14
	Cname  goto 15


state 8
	program : TypeDefBlock ClassdefBlock . GdeclBlock FdefBlock MainBlock  (1)
	program : TypeDefBlock ClassdefBlock . GdeclBlock MainBlock  (2)
	GdeclBlock : .  (34)

	DECL  shift 16
	ID  reduce 34
	INT  reduce 34
	STR  reduce 34

	GdeclBlock  goto 17


state 9
	TypeDef : ID '{' . FieldDeclList '}'  (7)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	.  error

	TypeName  goto 21
	FieldDeclList  goto 22
	FieldDecl  goto 23


state 10
	TypeDefBlock : TYPE TypeDefList ENDTYPE .  (3)

	.  reduce 3


state 11
	TypeDefList : TypeDefList TypeDef .  (5)

	.  reduce 5


state 12
	Cname : ID .  (16)

	.  reduce 16


state 13
	ClassdefBlock : CLASS ClassDefList . ENDCLASS  (11)
	ClassDefList : ClassDefList . ClassDef  (13)

	ID  shift 12
	ENDCLASS  shift 24
	.  error

	ClassDef  goto 25
	Cname  goto 15


state 14
	ClassDefList : ClassDef .  (14)

	.  reduce 14


state 15
	ClassDef : Cname . '{' DECL Fieldlists MethodDecl ENDDECL MethodDefns '}'  (15)

	'{'  shift 26
	.  error


state 16
	GdeclBlock : DECL . GdeclList ENDDECL  (32)
	GdeclBlock : DECL . ENDDECL  (33)

	ID  shift 27
	INT  shift 28
	STR  shift 29
	ENDDECL  shift 30
	.  error

	GdeclList  goto 31
	Type  goto 32
	GDecl  goto 33


state 17
	program : TypeDefBlock ClassdefBlock GdeclBlock . FdefBlock MainBlock  (1)
	program : TypeDefBlock ClassdefBlock GdeclBlock . MainBlock  (2)

	ID  shift 27
	INT  shift 34
	STR  shift 29
	.  error

	FdefBlock  goto 35
	MainBlock  goto 36
	Fdef  goto 37
	Type  goto 38


state 18
	TypeName : ID .  (125)

	.  reduce 125


state 19
	TypeName : INT .  (123)

	.  reduce 123


state 20
	TypeName : STR .  (124)

	.  reduce 124


state 21
	FieldDecl : TypeName . ID COLON  (10)

	ID  shift 39
	.  error


state 22
	TypeDef : ID '{' FieldDeclList . '}'  (7)
	FieldDeclList : FieldDeclList . FieldDecl  (8)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	'}'  shift 40
	.  error

	TypeName  goto 21
	FieldDecl  goto 41


state 23
	FieldDeclList : FieldDecl .  (9)

	.  reduce 9


state 24
	ClassdefBlock : CLASS ClassDefList ENDCLASS .  (11)

	.  reduce 11


state 25
	ClassDefList : ClassDefList ClassDef .  (13)

	.  reduce 13


state 26
	ClassDef : Cname '{' . DECL Fieldlists MethodDecl ENDDECL MethodDefns '}'  (15)

	DECL  shift 42
	.  error


state 27
	Type : ID .  (40)

	.  reduce 40


state 28
	Type : INT .  (38)

	.  reduce 38


state 29
	Type : STR .  (39)

	.  reduce 39


state 30
	GdeclBlock : DECL ENDDECL .  (33)

	.  reduce 33


state 31
	GdeclBlock : DECL GdeclList . ENDDECL  (32)
	GdeclList : GdeclList . GDecl  (35)

	ID  shift 27
	INT  shift 28
	STR  shift 29
	ENDDECL  shift 43
	.  error

	Type  goto 32
	GDecl  goto 44


state 32
	GDecl : Type . GidList COLON  (37)

	ID  shift 45
	.  error

	GidList  goto 46
	Gid  goto 47


state 33
	GdeclList : GDecl .  (36)

	.  reduce 36


state 34
	Type : INT .  (38)
	MainBlock : INT . MAIN '(' ')' '{' LdeclBlock Body '}'  (66)
	MainBlock : INT . MAIN '(' ')' '{' Body '}'  (67)

	MAIN  shift 48
	ID  reduce 38


state 35
	program : TypeDefBlock ClassdefBlock GdeclBlock FdefBlock . MainBlock  (1)
	FdefBlock : FdefBlock . Fdef  (46)

	ID  shift 27
	INT  shift 34
	STR  shift 29
	.  error

	MainBlock  goto 49
	Fdef  goto 50
	Type  goto 38


state 36
	program : TypeDefBlock ClassdefBlock GdeclBlock MainBlock .  (2)

	.  reduce 2


state 37
	FdefBlock : Fdef .  (47)

	.  reduce 47


state 38
	Fdef : Type . ID '(' ParamList ')' '{' LdeclBlock Body '}'  (48)
	Fdef : Type . ID '(' ParamList ')' '{' Body '}'  (49)

	ID  shift 51
	.  error


state 39
	FieldDecl : TypeName ID . COLON  (10)

	COLON  shift 52
	.  error


state 40
	TypeDef : ID '{' FieldDeclList '}' .  (7)

	.  reduce 7


state 41
	FieldDeclList : FieldDeclList FieldDecl .  (8)

	.  reduce 8


state 42
	ClassDef : Cname '{' DECL . Fieldlists MethodDecl ENDDECL MethodDefns '}'  (15)

	ID  shift 53
	INT  shift 54
	STR  shift 55
	.  error

	Fieldlists  goto 56
	Fld  goto 57


state 43
	GdeclBlock : DECL GdeclList ENDDECL .  (32)

	.  reduce 32


state 44
	GdeclList : GdeclList GDecl .  (35)

	.  reduce 35


state 45
	Gid : ID .  (43)
	Gid : ID . '[' NUM ']'  (44)
	Gid : ID . '(' GParamList ')'  (45)

	'('  shift 58
	'['  shift 59
	COLON  reduce 43
	COMMA  reduce 43


state 46
	GDecl : Type GidList . COLON  (37)
	GidList : GidList . COMMA Gid  (41)

	COLON  shift 60
	COMMA  shift 61
	.  error


state 47
	GidList : Gid .  (42)

	.  reduce 42


state 48
	MainBlock : INT MAIN . '(' ')' '{' LdeclBlock Body '}'  (66)
	MainBlock : INT MAIN . '(' ')' '{' Body '}'  (67)

	'('  shift 62
	.  error


state 49
	program : TypeDefBlock ClassdefBlock GdeclBlock FdefBlock MainBlock .  (1)

	.  reduce 1


state 50
	FdefBlock : FdefBlock Fdef .  (46)

	.  reduce 46


state 51
	Fdef : Type ID . '(' ParamList ')' '{' LdeclBlock Body '}'  (48)
	Fdef : Type ID . '(' ParamList ')' '{' Body '}'  (49)

	'('  shift 63
	.  error


state 52
	FieldDecl : TypeName ID COLON .  (10)

	.  reduce 10


state 53
	Fld : ID . ID COLON  (21)

	ID  shift 64
	.  error


state 54
	Fld : INT . ID COLON  (19)

	ID  shift 65
	.  error


state 55
	Fld : STR . ID COLON  (20)

	ID  shift 66
	.  error


state 56
	ClassDef : Cname '{' DECL Fieldlists . MethodDecl ENDDECL MethodDefns '}'  (15)
	Fieldlists : Fieldlists . Fld  (17)

	ID  shift 67
	INT  shift 68
	STR  shift 69
	.  error

	Fld  goto 70
	MethodDecl  goto 71
	MDecl  goto 72


state 57
	Fieldlists : Fld .  (18)

	.  reduce 18


state 58
	Gid : ID '(' . GParamList ')'  (45)
	GParamList : .  (64)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	COMMA  reduce 64
	')'  reduce 64

	TypeName  goto 73
	GParamList  goto 74
	GParam  goto 75


state 59
	Gid : ID '[' . NUM ']'  (44)

	NUM  shift 76
	.  error


state 60
	GDecl : Type GidList COLON .  (37)

	.  reduce 37


state 61
	GidList : GidList COMMA . Gid  (41)

	ID  shift 45
	.  error

	Gid  goto 77


state 62
	MainBlock : INT MAIN '(' . ')' '{' LdeclBlock Body '}'  (66)
	MainBlock : INT MAIN '(' . ')' '{' Body '}'  (67)

	')'  shift 78
	.  error


state 63
	Fdef : Type ID '(' . ParamList ')' '{' LdeclBlock Body '}'  (48)
	Fdef : Type ID '(' . ParamList ')' '{' Body '}'  (49)
	ParamList : .  (60)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	COMMA  reduce 60
	')'  reduce 60

	TypeName  goto 79
	ParamList  goto 80
	Param  goto 81


state 64
	Fld : ID ID . COLON  (21)

	COLON  shift 82
	.  error


state 65
	Fld : INT ID . COLON  (19)

	COLON  shift 83
	.  error


state 66
	Fld : STR ID . COLON  (20)

	COLON  shift 84
	.  error


state 67
	Fld : ID . ID COLON  (21)
	MDecl : ID . ID '(' ParamList ')' COLON  (24)

	ID  shift 85
	.  error


state 68
	Fld : INT . ID COLON  (19)
	MDecl : INT . ID '(' ParamList ')' COLON  (25)

	ID  shift 86
	.  error


state 69
	Fld : STR . ID COLON  (20)
	MDecl : STR . ID '(' ParamList ')' COLON  (26)

	ID  shift 87
	.  error


state 70
	Fieldlists : Fieldlists Fld .  (17)

	.  reduce 17


state 71
	ClassDef : Cname '{' DECL Fieldlists MethodDecl . ENDDECL MethodDefns '}'  (15)
	MethodDecl : MethodDecl . MDecl  (22)

	ID  shift 88
	INT  shift 89
	STR  shift 90
	ENDDECL  shift 91
	.  error

	MDecl  goto 92


state 72
	MethodDecl : MDecl .  (23)

	.  reduce 23


state 73
	GParam : TypeName . ID  (65)

	ID  shift 93
	.  error


state 74
	Gid : ID '(' GParamList . ')'  (45)
	GParamList : GParamList . COMMA GParam  (62)

	COMMA  shift 94
	')'  shift 95
	.  error


state 75
	GParamList : GParam .  (63)

	.  reduce 63


state 76
	Gid : ID '[' NUM . ']'  (44)

	']'  shift 96
	.  error


state 77
	GidList : GidList COMMA Gid .  (41)

	.  reduce 41


state 78
	MainBlock : INT MAIN '(' ')' . '{' LdeclBlock Body '}'  (66)
	MainBlock : INT MAIN '(' ')' . '{' Body '}'  (67)

	'{'  shift 97
	.  error


state 79
	Param : TypeName . ID  (61)

	ID  shift 98
	.  error


state 80
	Fdef : Type ID '(' ParamList . ')' '{' LdeclBlock Body '}'  (48)
	Fdef : Type ID '(' ParamList . ')' '{' Body '}'  (49)
	ParamList : ParamList . COMMA Param  (58)

	COMMA  shift 99
	')'  shift 100
	.  error


state 81
	ParamList : Param .  (59)

	.  reduce 59


state 82
	Fld : ID ID COLON .  (21)

	.  reduce 21


state 83
	Fld : INT ID COLON .  (19)

	.  reduce 19


state 84
	Fld : STR ID COLON .  (20)

	.  reduce 20


state 85
	Fld : ID ID . COLON  (21)
	MDecl : ID ID . '(' ParamList ')' COLON  (24)

	COLON  shift 82
	'('  shift 101
	.  error


state 86
	Fld : INT ID . COLON  (19)
	MDecl : INT ID . '(' ParamList ')' COLON  (25)

	COLON  shift 83
	'('  shift 102
	.  error


state 87
	Fld : STR ID . COLON  (20)
	MDecl : STR ID . '(' ParamList ')' COLON  (26)

	COLON  shift 84
	'('  shift 103
	.  error


state 88
	MDecl : ID . ID '(' ParamList ')' COLON  (24)

	ID  shift 104
	.  error


state 89
	MDecl : INT . ID '(' ParamList ')' COLON  (25)

	ID  shift 105
	.  error


state 90
	MDecl : STR . ID '(' ParamList ')' COLON  (26)

	ID  shift 106
	.  error


state 91
	ClassDef : Cname '{' DECL Fieldlists MethodDecl ENDDECL . MethodDefns '}'  (15)

	ID  shift 27
	INT  shift 28
	STR  shift 29
	.  error

	Fdef  goto 107
	Type  goto 38
	MethodDefns  goto 108


state 92
	MethodDecl : MethodDecl MDecl .  (22)

	.  reduce 22


state 93
	GParam : TypeName ID .  (65)

	.  reduce 65


state 94
	GParamList : GParamList COMMA . GParam  (62)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	.  error

	TypeName  goto 73
	GParam  goto 109


state 95
	Gid : ID '(' GParamList ')' .  (45)

	.  reduce 45


state 96
	Gid : ID '[' NUM ']' .  (44)

	.  reduce 44


state 97
	MainBlock : INT MAIN '(' ')' '{' . LdeclBlock Body '}'  (66)
	MainBlock : INT MAIN '(' ')' '{' . Body '}'  (67)

	START  shift 110
	DECL  shift 111
	.  error

	LdeclBlock  goto 112
	Body  goto 113


state 98
	Param : TypeName ID .  (61)

	.  reduce 61

